deploy/base/openehr-nodes/mumc/transform-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mumc-transform-rest
  namespace: dh-health
  labels:
    app: mumc-transform-rest
spec:
  selector:
    matchLabels:
      app: mumc-transform-rest
  template:
    metadata:
      labels:
        app: mumc-transform-rest
    spec:
      containers:
      - name: mumc-transform-rest
        image: registry.prod.dh.unimaas.nl/docker-health/transform-rest:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: transform-rest-logs
          mountPath: /var/log/mumc
          subPath: mumc/transform-rest
      volumes:
      - name: transform-rest-logs
        persistentVolumeClaim:
          claimName: log-pvc
