deploy/base/openehr-nodes/mumc/transform-rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mumc-transform-rest
  namespace: dh-health
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: mumc-transform-rest
