deploy/base/openehr-nodes/mumc/transform-rest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mumc-transform-rest-ingress
  namespace: dh-health
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: mumc.transform.env.dh.unimaas.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mumc-transform-rest
            port:
              number: 8080
